--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ base64 = "0.13.0"
 log = "0.4.14"
 env_logger = "0.8.3"
 aes-gcm = "0.9.2"
+eventlog-rs = { git = "https://github.com/inclavare-containers/eventlog-rs", branch = "master" }
 
 [build-dependencies]
 tonic-build = "0.5"
